--- a/sync.yml
+++ b/sync.yml
@@ -15,7 +15,7 @@ group:
     repos: |
       orange-cloudavenue/terraform-plugin-framework-validators
       orange-cloudavenue/cloudavenue-sdk-go
-      # orange-cloudavenue/terraform-plugin-framework-planmodifiers
+      orange-cloudavenue/terraform-plugin-framework-planmodifiers
       # orange-cloudavenue/terraform-plugin-framework-supertypes
       # orange-cloudavenue/terraform-plugin-framework-superschema
       # orange-cloudavenue/terraform-provider-cloudavenue
