--- a/sync.yml
+++ b/sync.yml
@@ -18,7 +18,7 @@ group:
       orange-cloudavenue/terraform-plugin-framework-planmodifiers
       orange-cloudavenue/terraform-plugin-framework-supertypes
       orange-cloudavenue/terraform-plugin-framework-superschema
-      # orange-cloudavenue/terraform-provider-cloudavenue
+      orange-cloudavenue/terraform-provider-cloudavenue
       # orange-cloudavenue/terraform-resource-templates
       # orange-cloudavenue/terraform-provider-cloudavenue
       # orange-cloudavenue/orange-cloudavenue.github.io
