--- a/.github/workflows/tf_plan-or-apply.yml
+++ b/.github/workflows/tf_plan-or-apply.yml
@@ -62,7 +62,26 @@ jobs:
 
       - name: Terraform Init
         id: init
-        run: terraform init
+        run: |
+          cat > backend.tf << EOF
+          terraform {
+            backend "s3" {
+              skip_credentials_validation = true
+              skip_metadata_api_check = true
+              skip_region_validation = true
+              skip_requesting_account_id = true
+              key = "${{ secrets.TF_VAR_S3_KEY }}"
+              region = "region01"
+              bucket = "${{ secrets.TF_VAR_S3_BUCKET }}"
+              endpoints = {
+                s3 = "${{ secrets.TF_VAR_S3_ENDPOINT }}"
+              }
+              access_key = "${{ secrets.TF_VAR_S3_ACCESS_KEY }}"
+              secret_key = "${{ secrets.TF_VAR_S3_SECRET_KEY }}"
+            }
+          }
+          EOF
+          terraform init -backend-config=backend.tf
       
       - name: Terraform Validate
         id: validate
