chore: fix license CI

--- a/.github/workflows/pr_license.yml
+++ b/.github/workflows/pr_license.yml
@@ -11,7 +11,11 @@ jobs:
   header-license:
     name: "Check License Header"
     runs-on: [self-hosted, Linux]
-    if: github.event.pull_request.draft == false
+    # Not run on draft PRs or PRs from forks or dependabot
+    if: |
+       github.event.pull_request.draft == false &&
+       ! github.event.pull_request.head.repo.fork &&
+       github.actor != 'dependabot[bot]'
     steps:
       - name: Checkout Repository
         uses: actions/checkout@v4 
@@ -28,7 +32,7 @@ jobs:
       - name: Check if any files changed
         id: changed-files
         run: |
-          git diff --exit-code || echo "::set-output name=any_changed::true"
+          git diff --exit-code || echo "any_changed=true >> $GITHUB_OUTPUT"
 
       - name: Commit and push changes
         if: steps.changed-files.outputs.any_changed == 'true'
