--- a/.github/workflows/go_proxy-refresh.yml
+++ b/.github/workflows/go_proxy-refresh.yml
@@ -8,7 +8,7 @@ permissions:
   
 jobs:
   refresh:
-    runs-on: [self-hosted, Linux]
+    runs-on: arc-runners
     name: "Refresh Go Proxy"
     steps:
       - uses: andrewslotin/go-proxy-pull-action@master
