--- a/.github/workflows/go_report-card.yml
+++ b/.github/workflows/go_report-card.yml
@@ -8,7 +8,7 @@ permissions:
   
 jobs:
   refresh-go-report-card:
-    runs-on: [self-hosted, Linux]
+    runs-on: arc-runners
     name: "Refresh"
     steps:
       - uses: creekorful/goreportcard-action@v1.0
