--- a/.github/workflows/go_unit-test.yml
+++ b/.github/workflows/go_unit-test.yml
@@ -13,7 +13,7 @@ permissions:
 
 jobs:
   check-test-requirements:
-    runs-on: [self-hosted, Linux]
+    runs-on: arc-runners
     outputs:
       need-test: ${{ steps.filter.outputs.go }}
     steps:
@@ -29,7 +29,7 @@ jobs:
   coverage:
     needs: check-test-requirements
     if: ${{ needs.check-test-requirements.outputs.need-test == 'true' }}
-    runs-on: [self-hosted, Linux]
+    runs-on: arc-runners
     strategy:
       fail-fast: false
       matrix:
@@ -58,7 +58,7 @@ jobs:
   coverage-finish:
     if: inputs.send-covegage == 'true'
     needs: coverage
-    runs-on: [self-hosted, Linux]
+    runs-on: arc-runners
     steps:
       - uses: shogo82148/actions-goveralls@v1
         with:
