--- a/.github/workflows/release_publish-simple-release.yml
+++ b/.github/workflows/release_publish-simple-release.yml
@@ -15,7 +15,7 @@ on:
             type: string
 jobs:
   publish-release:
-    runs-on: [self-hosted, Linux]
+    runs-on: arc-runners
     steps:
       - id: checkout
         uses: actions/checkout@v4
