--- a/.github/workflows/go_unit-test.yml
+++ b/.github/workflows/go_unit-test.yml
@@ -44,10 +44,9 @@ jobs:
       - uses: actions/setup-go@v5
         with:
           go-version: ${{ matrix.go }}
-      - name: Install dependencies
+      - name: Install dependencies & run tests
         shell: bash 
-        run: go mod download
-      - run: go test -v -coverprofile=profile.cov ./...
+        run: find . -name go.mod -execdir pwd \; | xargs -I {} bash -c 'cd {} && go mod download && go test -v -coverprofile=profile.cov ./...'
       - if: inputs.send-covegage == 'true'
         name: Send coverage
         uses: shogo82148/actions-goveralls@v1
