--- a/.github/workflows/go_golangci-lint.yml
+++ b/.github/workflows/go_golangci-lint.yml
@@ -31,7 +31,7 @@ jobs:
       - uses: actions/checkout@v4
       - uses: actions/setup-go@v5
         with:
-          go-version-file: 'go.mod'
+          go-version-file: ${{ github.workspace }}/go.mod
       - name: Install dependencies
         shell: bash 
         run: go mod download
