--- a/.github/workflows/go_golangci-lint.yml
+++ b/.github/workflows/go_golangci-lint.yml
@@ -31,7 +31,9 @@ jobs:
       - uses: actions/checkout@v4
       - uses: actions/setup-go@v5
         with:
-          go-version-file: ${{ github.workspace }}/go.mod
+          # Needs to use the Go work path to find the go.mod file
+          # and set the Go version
+          go-version-file: "go.work"
       - name: Install dependencies
         shell: bash 
         run: go mod download
