--- a/.github/workflows/pr_license.yml
+++ b/.github/workflows/pr_license.yml
@@ -2,6 +2,15 @@ name: "License Check"
 
 on:
   workflow_call:
+    inputs:
+      ref:
+        description: 'Git reference to checkout (eg: {{github.ref}})'
+        required: true
+        type: string
+      repository:
+        description: 'Repository to checkout (eg: {{github.repository}})'
+        required: true
+        type: string
 
 permissions:
   pull-requests: write
@@ -20,7 +29,8 @@ jobs:
       - name: Checkout Repository
         uses: actions/checkout@v4 
         with:
-          ref: ${{ github.event.pull_request.head.ref }}
+          ref: ${{ inputs.ref }}
+          repository: ${{ inputs.repository }}
       - uses: actions/setup-go@v5
         with:
           go-version: 1.23
